profile .html en .css zijn aangepast, bericht-melding komt boven alle berichten. base.html heb ik aleen comentar toegevoegd aan header block, met dit kan je bepalen waar header moet verborgen worden op templates

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
   {% block head %}{% endblock %}
 </head>
 <body>
-
+<!-- ✅ Header blok – overschrijfbaar in child templates -->
 {% block header %}
 <header>
   <a href="/">
