bij instellingen: regex validatie toegevoegd voor telefoonnummer en emailadres+ opslaan lukt niet als niet alle velden zijn ingevuld.
dark-mode verder afgewerkt

aangekocht abonnoment wordt weergegeven op profiel en tijdens een bestaand abonnement kan men geen nieuw abonnement kopen.

Bij bedankt pagina ook knop ga naar profiel toegevoegd.

Na het inloggen blijf je ingelogd tot je de app sluit of uitlogd. Je blijft dus opok ingelogd op pagina's die ook publiekelijk zijn.

--- a/app/static/css/defect.css
+++ b/app/static/css/defect.css
@@ -177,6 +177,10 @@ input[type="checkbox"] {
   color: #D41444;
 }
 
+body.dark-mode .card-item{
+  background-color: black;
+  color: white;
+}
 /* Wanneer een kaart wordt ingedrukt */
 .card-slider .card-item.pressed {
   box-shadow: none;
