--- a/app/static/css/form.css
+++ b/app/static/css/form.css
@@ -7,12 +7,12 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: white;
 }
 
 /* Formulier container */
 .form-container {
-  background-color: #fff;
+  background-color: white;
   padding: 15px;
   border-radius: 8px;
   width: 100%;
@@ -20,6 +20,14 @@ body {
   margin: auto;
 }
 
+body.dark-mode .form-container{
+  background-color: black;
+  padding: 15px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 500px;
+  margin: auto;
+}
 /* Formulier rij voor de velden */
 .form-row {
   display: flex;           /* Flexbox activeert naast elkaar plaatsen */
@@ -112,7 +120,7 @@ input[type="checkbox"] {
   position: relative;
   max-width: 90%;
   margin: 50px auto;
-  background: #fff;
+  background: white;
   box-shadow: 0 10px 10px rgba(34, 35, 58, 0.2);
   padding: 30px;
   border-radius: 25px;
@@ -121,6 +129,20 @@ input[type="checkbox"] {
   transition: 0.2s ease;
 }
 
+body.dark-mode .card-slider .card-item {
+  /*display: flex;*/
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  max-width: 90%;
+  margin: 50px auto;
+  background: black;
+  box-shadow: 0 10px 10px rgba(34, 35, 58, 0.2);
+  padding: 30px;
+  border-radius: 25px;
+  min-height: 300px;
+  border: 2px solid transparent;
+  transition: 0.2s ease;
 /* Inhoud van de kaart */
 .card-item__content {
   margin-left: 20rem;
@@ -182,3 +204,8 @@ input[type="checkbox"] {
   box-shadow: none;
   transform: translateY(2px);
 }
+
+body.dark-mode .div.card-item{
+  background-color: black;
+}
+
