--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -20,6 +20,27 @@
 
 }
 
+body.dark-mode .background{
+    background: url(../images/Group7@2x.png), url(../images/MaskGroup6@2x.png), url(../images/Group9.png);
+    background-size: contain, contain, 47%;
+    background-position: -3px center, calc(100% + 30px) calc(100% + 20px), calc(80%) ;
+
+
+
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: flex-end;
+    color: black;
+    width: auto;
+    height: 80vh;
+    background-repeat: no-repeat;
+    margin: 20px;
+    background-color: black;
+    border-radius: 20px;
+}
+
 
 
 
@@ -32,7 +53,6 @@
   margin-right: 26%; /* duwt de box naar rechts in zijn container */
     z-index: 50;
 }
-
 
 .auth0-lock-content-wrapper{
         border: solid 5px;
