--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -10,6 +10,18 @@
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
 }
 
+body.dark-mode .div1{
+  background: url("../images/div-1.png");
+  height: 80vh;
+  background-color: black;
+  border-radius: 20px;
+  margin: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
+}
+
 .text-spot{
   display: grid;
   padding-top: 10rem;
@@ -43,7 +55,21 @@
   position: relative;
   max-width: 65rem;
   /*margin: auto; WAAROM WERKT DIT NI??? DA ZOU MOETEN WERKENNN AAAAAAAAAAAAAAAAAAAAAAAAAAAAA*/
-  background: #fff;
+  background: white;
+  box-shadow: 0px 10px 10px rgba(34, 35, 58, 0.2);
+  padding: 25px;
+  border-radius: 25px;
+  height: 400px;
+  border: 2px solid transparent;
+  transition: 0.2s ease;
+}
+
+body.dark-mode .card-slider .card-item{
+  width: 95%;
+  position: relative;
+  max-width: 65rem;
+  /*margin: auto; WAAROM WERKT DIT NI??? DA ZOU MOETEN WERKENNN AAAAAAAAAAAAAAAAAAAAAAAAAAAAA*/
+  background: black;
   box-shadow: 0px 10px 10px rgba(34, 35, 58, 0.2);
   padding: 25px;
   border-radius: 25px;
@@ -132,6 +158,18 @@
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
 }
 
+body.dark-mode .div3{
+  background: url("../images/help.png");
+  height: 80vh;
+  background-color: black;
+  border-radius: 20px;
+  margin: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
+}
+
 /* Footer / Contactbalk */
 .footerwrapper {
   background: url(../images/footerbalk.png);
@@ -149,6 +187,21 @@
   border-radius: 20px;
 }
 
+body.dark-mode .footerwrapper{
+  background: url(../images/footerbalk.png);
+  background-size: 100vw;
+  background-position: bottom;
+  display: flex;
+  position: relative;
+  align-items: center;
+  color: white;
+  width: auto;
+  height: 80vh;
+  background-repeat: no-repeat;
+  margin: 20px;
+  background-color: black;
+  border-radius: 20px;
+}
 .socials {
   position: absolute;
   margin-right: 20px;
