--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -278,3 +278,17 @@ body.dark-mode .dark-toggle-btn {
 body.dark-mode .card .card-text {
   color: #f0f0f0 !important;
 }
+/* Общий стиль карточек */
+.card {
+  user-select: none;
+}
+
+/* Новые стили для изображения профиля */
+.profile-foto {
+  Width: 100%;
+  height: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  border-radius: 3rem; /* скругление углов */
+
+}
