--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -27,7 +27,9 @@
 
 /* ✅ Фото пользователя / Profielfoto */
 .profile-foto {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
     height: 100%;
     max-height: 300px;
     object-fit: cover;
