navigatiebalk terug gezet in instellingen

--- a/app/templates/instellingen.html
+++ b/app/templates/instellingen.html
@@ -42,7 +42,7 @@
 </style>
 {% endblock %}
 
-{% block header %}{% endblock %}
+{#{% block header %}{% endblock %} <!-- deze block is nodig om de header te verbergen, dus met deze kan jij bepalen of dit block moet verborgen worden of niet -->#}
 
 {% block content %}
 <!-- ✅ Кнопка возврата на профиль / Terug naar profiel knop -->
