--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
     <a href="/tarieven">Tarieven</a>
     <a href="maps">Vind een fiets</a>
     <a href="#">Help</a>
-    <a href="#footer">Contact</a>
+    <a href="/#footer">Contact</a>
     <div class="dropdown">
       <a href="#">Meer ▼</a>
       <div class="dropdown-menu">
