--- a/app/templates/defect.html
+++ b/app/templates/defect.html
@@ -1,30 +1,21 @@
 {% extends "base.html" %}
 
 {% block head %}
-
 <link rel="stylesheet" href="{{ url_for('static', filename='css/defect.css') }}">
-
 {% endblock %}
 
-
-
-
-
 {% block content %}
+<img src="{{ url_for('static', filename='img/O_C.png') }}" alt="Onder constructie" width="300" style="display: block; margin: 0 auto;">
+
 
 <div class="card-slider">
     <div class="card-item">
-     <h2 style="margin:auto; width:fit-content">Fiets defect?</h2>
-        <p style="margin:auto; width:fit-content">PECH</p>
+        <h2 style="margin:auto; width:fit-content"></h2>
+        <p style="margin:auto; width:fit-content">meer vragen -->  bel Aslambek</p>
     </div>
 </div>
-
 {% endblock %}
 
-
-
-
-
-
 {% block scripts %}
+<!-- eventueel toekomstige JavaScript -->
 {% endblock %}
